--- a/src/github/common/loading/Loading.scss
+++ b/src/github/common/loading/Loading.scss
@@ -1,6 +1,8 @@
 :local(.root) {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 40px;
   height: 412px;
+  border-radius: 5px;
 }
